# project-defaults

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  CURSOR-SETUP.md  EXAMPLE-user-authentication.md  Example-ARCHITECTURE.md  LICENSE  PROJECT-DEFAULTS.md  README.md  create_agents_structure.sh  harmonize_agents.sh  install_agents.sh  update_agent_formats.sh
Claude/: CLAUDE.md  README.md  global_preferences.json
Cursor/: .cursorrules
chat_guides/: CHAT-GUIDE-TEMPLATE.md  README.md
mcp-docs/: fastmcp2-client.md  fastmcp2-readme.md  fastmcp2-transports.md  mcp-architecture-overview.md  mcp-client-concepts.md  mcp-client.md  mcp-connect-to-local-mcp-servers.md  mcp-connect-to-remote-mcp-servers.md  mcp-faq.md  mcp-inspector.md  mcp-introduction.md  mcp-python-sdk-readme.md  mcp-server-concepts.md  repomix-output.xml
mcp_servers/prompt_management_mcp/: build_mcp_deployment.sh  prompt_management_mcp.py
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/: Containerfile  README.md  pyproject.toml
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/examples/prompts/: example.yaml
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/manifests/base/: deployment.yaml  kustomization.yaml
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/manifests/overlays/prod/: deployment-patch.yaml  kustomization.yaml
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/scripts/: build.sh  deploy-openshift.sh
mcp_servers/prompt_management_mcp/yaml-prompt-mcp/src/yaml_prompt_mcp/: __init__.py  cli.py
