[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaml-prompt-mcp"
version = "1.0.0"
description = "YAML-based prompt management for FastMCP servers"
authors = [{name = "Your Organization"}]
dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[project.scripts]
yaml-prompt-mcp = "yaml_prompt_mcp.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]
